# lang-chain-rag-2

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
docs/: PH01-walkthrough.md  README.md  app.md  chain.md  cheat-get_loader.md  chunker.md  config.md  final-plan.md  index.md  langchain-community.md  log-2026-01-11.md  mind-maps.md  rules.md  vectorstore.md
docs/.obsidian/: graph.json  workspace.json
docs/architecture/: config.md  loaders.md  memory.md
docs/design/: embeddings.md
docs/guides/faiss/: overview.md
docs/guides/pydantic/: 15Pydentic-questions-fundamental.md  3. BaseModel Fundamentals.md  fundamentals.md  learn-pydantic.md  questions.md
docs/learning/pydentic/: 15Pydentic-questions-fundamental.ipynb  cheet-pydantic-settings.md  pydantic-syllabus.md
docs/planning/: implementation-p1.md  plan-phase-1.md
docs/prompts/: 15-golden-questions.txt  explore-with-examples.txt
docs/reference/: cheet-faiss.md  lcel-cheatsheet.md  learn-lcel.md  learn-pydantic.md
notebooks/: 01_exploration.ipynb  15Pydentic-questions-fundamental.ipynb  15_pydantic_fundamentals.ipynb  learn_pydantic.ipynb  loaders.ipynb  pydantic-api.md  pydantic-fundamentals.ipynb  pydantic_fundamentals.ipynb
src/: __init__.py  chain.py  chunker.py  config.py  embeddings.py  loaders.py  memory.py  vectorstore.py
tests/: test_chain.py
