[project]
name = "rag-document-qa"
version = "0.1.0"
description = "RAG-based Document Q&A System using LangChain"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.3.0",
    "openai>=2.15.0",
    "faiss-cpu>=1.13.0",
    "streamlit>=1.52.0",
    "python-dotenv>=1.0.0",
    "pypdf>=6.6.0",
    "python-docx>=1.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]
